# ForestGapR

./: .Rbuildignore  .Rhistory  .gitattributes  .gitignore  .travis.yml  DESCRIPTION  ForestGapR.Rproj  NAMESPACE  NEWS.md  README.Rmd  README.md  configure.ac
R/: GapSPDF.R  GapSizeFDist.R  GapsChangesDec.R  GapsSPDF.R  GapsSpatPattern.R  GapsStats.R  datasets.R  getForestGaps.R
data/: ALS_CHM_CAU_2012.rda  ALS_CHM_CAU_2014.rda  ALS_CHM_DUC.rda
inst/tif/: ALS_CHM_CAU_2012.tif  ALS_CHM_CAU_2014.tif  ALS_CHM_DUC.tif
man/: ALS_CHM_CAU_2012.Rd  ALS_CHM_CAU_2014.Rd  ALS_CHM_DUC.Rd  GapChangeDec.Rd  GapSPDF.Rd  GapSizeFDist.Rd  GapStats.Rd  GapsSpatPattern.Rd  getForestGaps.Rd
readme/: fig_1.tif
